<resources>
    <string name="app_name">NeverBored</string>
    <string name="Title">Never Bored App</string>
    <string name="Piano">Piano</string>
    <string name="Sounds">Sonidos</string>
    <string name="Tiar">Tres en raya</string>
    <string name="Calculator">Calculadora</string>
    <string name="ABtn">A</string>
    <string name="BBtn">B</string>
    <string name="CBtn">C</string>
    <string name="DBtn">D</string>
    <string name="EBtn">E</string>
    <string name="FBtn">F</string>
    <string name="GBtn">G</string>
    <string name="ABBtn">A#</string>
    <string name="GABtn">G#</string>
    <string name="FGBtn">F#</string>
    <string name="DEBtn">D#</string>
    <string name="CDBtn">C#</string>
    <string name="CplusBtn">C+</string>
    <string name="Dice">Dados</string>
    <string name="boton">Tirar dado</string>
    <string name="boton2">Reset</string>
    <string name="juego_nuevo">Nuevo juego</string>


    <string name="Credits">Créditos</string>
    <string name="title_activity_credits">credits</string>

    <string name="Credits_title">Programación en Android </string>

    <string name="Credits_doneby"><u>Hecho por:</u>\n</string>
    <string name="Credits_name">
        \tHéctor Gutiérrez Li - 15202\n\n
        Andrea Presa Montesinos - 14354\n\n
        David Luengo Moraleja - 12230 \n
    </string>
    <string name="Credits_role">
        \tEstudiantes de la ETSII UPM\n\n\n\n\n
    </string>
    <string name="Acknowledgments_title"><u>Agradecimientos:</u></string>
    <string name="Acknowledgments_content">
        \tAl profesor Ángel García Beltrán por darnos\n
        \tlas clases de Android.\n\n\n\n\n\n
    </string>
    <string name="Extras_title"><u>Extras:</u>\n</string>
    <string name="Extras_content">
        \tEn esta aplicación se han incluido algunas\n
        \tfunciones ocultas que te pueden resultar de utilidad \n
        \t(o quizás no).\n
        \tEn cualquier caso, son graciosas, así que \n
        \tte animamos a encontrarlas!\n\n\n\n\n\n\n\n\n
    </string>

    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>

    <string name="bPlus">+</string>
    <string name="bMinus">-</string>
    <string name="bMult">x</string>
    <string name="bDiv">/</string>
    <string name="bPower">^</string>

    <string name="bPoint">.</string>

    <string name="bC">C</string>
    <string name="bE">E</string>

    <string name="bEqual">=</string>
</resources>
