<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Credits"
    android:background="@drawable/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/HiddenBtnCredits"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Credits_title"
            android:textColor="@color/pureBlack"
            android:textSize="35sp"
            android:textStyle="bold"
            android:fontFamily="casual"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Credits_doneby"
        android:textAllCaps="true"
        android:textStyle="italic"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/pureBlack"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Credits_name"
            android:textStyle="italic"
            android:textSize="15sp"
            android:textColor="@color/pureBlack"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Credits_role"
            android:textStyle="italic"
            android:textSize="10dp"
            android:textColor="@color/pureBlack"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Acknowledgments_title"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"
            android:textStyle="italic"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/pureBlack"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Acknowledgments_content"
            android:textStyle="italic"
            android:textSize="15sp"
            android:textColor="@color/pureBlack"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Extras_title"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"
            android:textStyle="italic"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/pureBlack"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Extras_content"
            android:textStyle="italic"
            android:textSize="15sp"
            android:textColor="@color/pureBlack"/>
    </LinearLayout>
    </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>